/**
 * @file
 * @brief Header file for the PlugBoard class.
 */

#pragma once

#include <array>

#include "EnigmaConfig.hpp"
#include "EnigmaTypes.hpp"
#include "PlugBoardPair.hpp"

/**
 * @brief Class representing the PlugBoard (Steckerbrett) of the Enigma machine.
 *
 * @image html PlugBoard_Structure_Diagram.svg "PlugBoard Structure" width=600px
 *
 * The plugboard allows for manual swapping of letter pairs before they enter
 * the rotor assembly and after they exit.
 */
class PlugBoard {
private:
    std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE> mapping;  // Direct mapping: mapping[Input] = Output

public:
    /**
     * @brief Constructor for the PlugBoard class.
     * Initializes an empty plugboard with no pairs (identity mapping).
     */
    PlugBoard();

    /**
     * @brief Constructor for the PlugBoard class.
     * Initializes the plugboard with a given array of pairs.
     * Validates that ports are not already used before connecting.
     *
     * @param pairs An array of pairs to initialize the plugboard with.
     * @throws std::invalid_argument If a port index is out of range or if there is a mapping conflict.
     */
    explicit PlugBoard(const std::array<PlugBoardPair, enigma::MAX_PLUGBOARD_PAIRS>& pairs);
    ~PlugBoard() = default;

    /**
     * @brief Swaps the input key based on the plugboard pairs.
     *
     * @param key The input key to be swapped.
     * @return AlphabetIndex The swapped key.
     */
    AlphabetIndex swap(AlphabetIndex key) const;
};
