#pragma once

#include "EnigmaMachineConfig.hpp"  // For RotorConfig
#include "Transformer.hpp"

/**
 * @file Rotor.hpp
 * @brief Defines the Rotor class, a concrete implementation of the Transformer interface.
 */

/**
 * @brief Class representing a rotor in the Enigma machine.
 * This class inherits from the Transformer class and implements the functionality
 * for transforming positions based on the rotor's transformation lookup table (LUT).
 * It also handles the rotor's rotation and notch position.
 */
class Rotor : public Transformer {
private:
    int notchPosition;
    int rotationCount;

    /**
     * @brief Generates the reverse transformation lookup table.
     * @throws std::runtime_error If reverse mapping generation fails.
     */
    void initReverseLookupTable();

    /**
     * @brief Initializes the rotor position.
     * This function sets the initial position of the rotor based on the provided offset.
     *
     * @param offset The initial offset for the rotor position.
     * @return int Returns 0 on success.
     */
    int initRotorPosition(int offset = 0);

public:
    /**
     * @brief Constructor for the Rotor class.
     * Initializes the rotor with a configuration.
     *
     * @param config The RotorConfig structure containing wiring and notch info.
     */
    explicit Rotor(const RotorConfig& config);
    explicit Rotor(RotorConfig&& config);
    ~Rotor() override = default;

    /**
     * @brief Transforms the given position based on the transformation lookup table (LUT).
     *
     * @param position The current position in the rotor.
     * @param reverse If true, transforms using the reverse LUT; otherwise, uses the forward LUT.
     * @return AlphabetIndex The transformed position.
     * @details This method is const-qualified, ensuring that the signal transformation does not modify the internal
     * state of the rotor.
     */
    AlphabetIndex transform(AlphabetIndex position, bool reverse = false) const override;

    /**
     * @brief Transforms the given position forward using the forward LUT.
     * @param position The current position in the rotor (0 to TRANSFORMER_SIZE - 1).
     * @return AlphabetIndex The transformed position (0 to TRANSFORMER_SIZE - 1).
     * @details Implements the forward signal path through the rotor's specific wiring,
     * accounting for current rotation offset.
     */
    AlphabetIndex transformForward(AlphabetIndex position) const override;

    /**
     * @brief Transforms the given position in reverse using the reverse LUT.
     * @param position The current position in the rotor (0 to TRANSFORMER_SIZE - 1).
     * @return AlphabetIndex The transformed position (0 to TRANSFORMER_SIZE - 1).
     * @details Implements the return signal path through the rotor's specific wiring,
     * accounting for current rotation offset.
     */
    AlphabetIndex transformReverse(AlphabetIndex position) const override;

    /**
     * @brief Rotates the rotor by one position.
     * If the rotor reaches the notch position, it returns 1, indicating that the next rotor should rotate.
     * Otherwise, it returns 0.
     *
     * @return int Returns 1 if the rotor reached the notch position, otherwise returns 0.
     */
    int rotate() override;

    /**
     * @brief Sets the rotor to a specific position.
     *
     * @param position The position to set the rotor to (0 to TRANSFORMER_SIZE - 1).
     */
    void setPosition(int position) override;

    /**
     * @brief Gets the current position of the rotor.
     *
     * @return int The current position (0 to TRANSFORMER_SIZE - 1).
     */
    int getPosition() const override;

    /**
     * @brief Checks if the given position is the notch position.
     *
     * @param position The position to check.
     * @return true if the position is the notch position, false otherwise.
     */
    bool isNotchPosition(int position) const;
};
