@startuml EnigmaMachineCore_Class_Diagram

' Styling
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam linetype ortho

' Enums and Structs
enum TransformerType {
    Undefined
    Rotor
    Reflector
}

enum enigma::EnigmaError {
    None = 0
    FileNotFound
    ConfigFieldMissing
    TransformerSizeMismatch
    ConfigCountMismatch
    PlugBoardExceedsMaximum
    PlugBoardCountMismatch
    RotorWiringOutOfRange
    RotorWiringDuplicate
    RotorWiringNotBijective
    PlugBoardPortOutOfRange
    PlugBoardPortConflict
}

class PlugBoardPair <<struct>> {
    + AlphabetIndex sourcePortIndex
    + AlphabetIndex destinationPortIndex
}

class RotorConfig <<struct>> {
    + AlphabetIndex notchPosition
    + std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE> wiring
}

class ReflectorConfig <<struct>> {
    + std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE> wiring
}

' Interfaces
interface IAssetProvider {
    + {abstract} loadAsset(assetName: std::string_view) : enigma::Result<std::string>
}

interface IEnigmaObserver {
    + {abstract} onRotorStepped(rotorIndex: int, position: AlphabetIndex) : void
    + {abstract} onCharEncrypted(input: char, output: char) : void
}

interface ILogger {
    + {abstract} log(level: LogLevel, message: std::string_view) : void
}

' Classes
class FileAssetProvider {
    + loadAsset(assetName: std::string_view) : enigma::Result<std::string>
}

class EnigmaMachineConfig <<struct>> {
    + int rotorCount
    + std::vector<AlphabetIndex> rotorPositions
    + std::vector<RotorConfig> rotors
    + ReflectorConfig reflector
    + std::array<PlugBoardPair, enigma::MAX_PLUGBOARD_PAIRS> plugBoardPairs
    + EnigmaMachineConfig()
    + enigma::EnigmaMachineData toData() const
}

class EnigmaConfigLoader {
    + {static} load(provider: IAssetProvider, fileName: std::string_view, assetPath: std::string_view) : enigma::Result<EnigmaMachineConfig>
    + {static} loadRotor(provider: IAssetProvider, fileName: std::string_view) : enigma::Result<RotorConfig>
    + {static} loadReflector(provider: IAssetProvider, fileName: std::string_view) : enigma::Result<ReflectorConfig>
}

class EnigmaMachine {
    - rotorBox : std::unique_ptr<RotorBox>
    - plugBoard : std::unique_ptr<PlugBoard>
    - observers : std::vector<IEnigmaObserver*>
    - logger : ILogger*
    # EnigmaMachine(config: const EnigmaMachineConfig&)
    # EnigmaMachine(config: EnigmaMachineConfig&&)
    + EnigmaMachine(logger: ILogger* = nullptr)
    + EnigmaMachine(fileName: std::string_view, assetPath: std::string_view, logger: ILogger* = nullptr)
    + EnigmaMachine(provider: IAssetProvider, fileName: std::string_view, assetPath: std::string_view, logger: ILogger* = nullptr)
    + EnigmaMachine(data: const enigma::EnigmaMachineData&, logger: ILogger* = nullptr)
    + ~EnigmaMachine()
    + keyTransform(input: AlphabetIndex) : AlphabetIndex
    + processBuffer(buffer: std::span<AlphabetIndex>) : void
    + setLogger(logger: ILogger*) : void
    + registerObserver(observer: IEnigmaObserver*) : void
    + removeObserver(observer: IEnigmaObserver*) : void
    + onRotorStepped(rotorIndex: int, position: AlphabetIndex) : void
    + onCharEncrypted(input: char, output: char) : void
}

class PlugBoard {
    - mapping : std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE>
    + PlugBoard()
    + PlugBoard(pairs: std::array<PlugBoardPair, enigma::MAX_PLUGBOARD_PAIRS>)
    + ~PlugBoard()
    + swap(key: AlphabetIndex) : AlphabetIndex const
}

class RotorBox {
    - rotorCount : int
    - rotorPositions : std::vector<AlphabetIndex>
    - transformers : std::vector<std::unique_ptr<Transformer>>
    - observers : std::vector<IEnigmaObserver*>
    - logger : ILogger*
    - initTransformers(rotors: const std::vector<RotorConfig>&, reflector: const ReflectorConfig&) : void
    - updateRotors() : void
    + RotorBox(logger: ILogger* = nullptr)
    + RotorBox(rotorPositions: const std::vector<AlphabetIndex>&, rotors: const std::vector<RotorConfig>&, reflector: const ReflectorConfig&, logger: ILogger* = nullptr)
    + RotorBox(rotorPositions: std::vector<AlphabetIndex>&&, rotors: std::vector<RotorConfig>&&, reflector: ReflectorConfig&&, logger: ILogger* = nullptr)
    + ~RotorBox()
    + printTransformers() : void
    + keyTransform(input: AlphabetIndex) : AlphabetIndex
    + registerObserver(observer: IEnigmaObserver*) : void
    + removeObserver(observer: IEnigmaObserver*) : void
}

abstract class Transformer {
    - lookupTable : std::array<std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE>, 2>
    # type : TransformerType
    # setTransformValue(row: int, col: int, value: AlphabetIndex) : void
    # getTransformValue(row: int, col: int) : AlphabetIndex
    # fillTransformRow(row: int, value: AlphabetIndex) : void
    # copyTransformRow(row: int, values: const std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE>&) : void
    # getTransformRow(row: int) : const std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE>&
    + Transformer()
    + {abstract} ~Transformer()
    + {abstract} transform(position: AlphabetIndex, reverse: bool) : AlphabetIndex
    + {abstract} transformForward(position: AlphabetIndex) : AlphabetIndex
    + {abstract} transformReverse(position: AlphabetIndex) : AlphabetIndex
    + {abstract} rotate() : int
    + {abstract} setPosition(position: AlphabetIndex) : void
    + getPosition() : AlphabetIndex
    + sizeOfLookupTable() : int
    + getType() : TransformerType
}

class Rotor {
    - notchPosition : AlphabetIndex
    - rotationCount : AlphabetIndex
    - initReverseLookupTable() : void
    + isNotchPosition(position: AlphabetIndex) : bool
    + Rotor(config: const RotorConfig&)
    + Rotor(config: RotorConfig&&)
    + ~Rotor()
    + transform(position: AlphabetIndex, reverse: bool) : AlphabetIndex
    + transformForward(position: AlphabetIndex) : AlphabetIndex
    + transformReverse(position: AlphabetIndex) : AlphabetIndex
    + rotate() : int
    + setPosition(position: AlphabetIndex) : void
    + getPosition() : AlphabetIndex
}

class Reflector {
    + Reflector(config: const ReflectorConfig&)
    + Reflector(config: ReflectorConfig&&)
    + ~Reflector()
    + transform(position: AlphabetIndex, reverse: bool) : AlphabetIndex
    + transformForward(position: AlphabetIndex) : AlphabetIndex
    + transformReverse(position: AlphabetIndex) : AlphabetIndex
    + rotate() : int
}

' POD Configuration
namespace enigma {
    struct RotorData <<struct>> {
        + AlphabetIndex notchPosition
        + std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE> wiring
    }

    struct ReflectorData <<struct>> {
        + std::array<AlphabetIndex, enigma::TRANSFORMER_SIZE> wiring
    }

    struct PlugBoardPairData <<struct>> {
        + AlphabetIndex sourcePortIndex
        + AlphabetIndex destinationPortIndex
    }

    struct PlugBoardData <<struct>> {
        + std::array<PlugBoardPairData, enigma::MAX_PLUGBOARD_PAIRS> pairs
    }

    struct EnigmaMachineData <<struct>> {
        + int rotorCount
        + std::array<AlphabetIndex, enigma::MAX_ROTORS> rotorPositions
        + std::array<RotorData, enigma::MAX_ROTORS> rotors
        + ReflectorData reflector
        + PlugBoardData plugBoard
    }
}

' Relationships
IAssetProvider <|.. FileAssetProvider : implements
IEnigmaObserver <|.. EnigmaMachine : implements

EnigmaConfigLoader ..> IAssetProvider : uses
EnigmaConfigLoader ..> EnigmaMachineConfig : returns (via Result)
EnigmaConfigLoader ..> RotorConfig : returns (via Result)
EnigmaConfigLoader ..> ReflectorConfig : returns (via Result)
EnigmaConfigLoader ..> enigma::EnigmaError : returns

EnigmaMachineConfig *-- RotorConfig
EnigmaMachineConfig *-- ReflectorConfig
EnigmaMachineConfig *-- PlugBoardPair

EnigmaMachine ..> EnigmaConfigLoader : uses (throws on error)
EnigmaMachine ..> IAssetProvider : uses (via ConfigLoader)
EnigmaMachine ..> ILogger : uses
EnigmaMachine *-- RotorBox
EnigmaMachine *-- PlugBoard
EnigmaMachine o-- IEnigmaObserver : notifies

PlugBoard ..> PlugBoardPair

RotorBox o-- Transformer
RotorBox ..> RotorConfig
RotorBox ..> ReflectorConfig
RotorBox o-- IEnigmaObserver : notifies
RotorBox ..> ILogger : uses

Transformer <|-- Rotor
Transformer <|-- Reflector
Transformer ..> TransformerType

' POD conversion and construction
EnigmaMachineConfig ..> enigma::EnigmaMachineData : toData()
EnigmaMachine ..> enigma::EnigmaMachineData : constructs from

' POD composition
enigma::EnigmaMachineData *-- enigma::RotorData
enigma::EnigmaMachineData *-- enigma::ReflectorData
enigma::EnigmaMachineData *-- enigma::PlugBoardData
enigma::PlugBoardData *-- enigma::PlugBoardPairData


@enduml
